revert back properties files

--- a/src/main/resources/io/jenkins/plugins/tuleap_oauth/TuleapLogoutAction/index_fr.properties
+++ b/src/main/resources/io/jenkins/plugins/tuleap_oauth/TuleapLogoutAction/index_fr.properties
@@ -1,3 +1,3 @@
-jenkinsLoggedOut=Vous vous \u00EAtes d\u00E9connect\u00E9 de Jenkins.
-loggedOutOf= Cependant, vous n'\u00EAtes peut \u00EAtre pas d\u00E9connect\u00E9 de
-bye=Bonne journ\u00E9e!
+jenkinsLoggedOut=Vous vous êtes déconnecté de Jenkins.
+loggedOutOf= Cependant, vous n'êtes peut être pas déconnecté de
+bye=Bonne journée!
