--- a/src/main/resources/io/jenkins/plugins/tuleap_oauth/TuleapAuthenticationErrorAction/index_fr.properties
+++ b/src/main/resources/io/jenkins/plugins/tuleap_oauth/TuleapAuthenticationErrorAction/index_fr.properties
@@ -1,3 +1,3 @@
 authenticationError=Une erreur s'est produite durant l'autentification, vous pouvez:
-retry=R\u00E9essayer de vous connecter.
+retry=Réessayer de vous connecter.
 contactAdmin=Contacter l'administrateur Jenkins/Tuleap.
